장르 관련해서 장르를 입력해야한다고 해서 루트유저가 장르 입력할 수 있는 기능 추가했습니다. 장르 만들때 추천서버에서 tag  추가하고 item에 tag List<Integer>로줌